Name:                   Hach
Version:                0.0.0
Description:            Simple chat

License:                MIT
License-file:           LICENSE

Author:                 Matvey Aksenov,
                        Dmitry Malikov

Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.5
Homepage:               http://github.com/dmalikov/HaCh

Library
  Build-Depends:        base >= 3 && < 5,
                        containers,
                        old-locale,
                        network,
                        time

  HS-Source-Dirs:       libhach

  Exposed-Modules:      Hach.Types
                        Hach.Storage
                        Hach.Format

  GHC-Options:          -Wall

  Extensions:           BangPatterns
                        UnicodeSyntax

Executable hach-client
  Main-is:              Client.hs
  HS-Source-Dirs:       client, libhach

Executable hach-server
  Main-is:              Server.hs
  HS-Source-Dirs:       server, libhach
