Name:                   Hach
Version:                0.0.0
Description:            Simple chat

License:                MIT
License-file:           LICENSE

Author:                 Matvey Aksenov,
                        Dmitry Malikov

Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.5
Homepage:               http://github.com/dmalikov/HaCh

Library
  Build-Depends:        base >= 3 && < 5,
                        containers,
                        old-locale,
                        network,
                        time

  HS-Source-Dirs:       libhach

  Exposed-Modules:      Hach.Types

  GHC-Options:          -Wall

Executable hach-client
  Main-is:              Client.hs
  HS-Source-Dirs:       client, libhach

Executable hach-nclient
  Build-Depends:        vty == 4.7.0.12,
                        vty-ui == 1.5
  Main-is:              Client.hs
  HS-Source-Dirs:       nclient, libhach

Executable hach-server
  Main-is:              Server.hs
  HS-Source-Dirs:       server, libhach
